Fixed scroll affix bug on small devices

--- a/mymusic.css
+++ b/mymusic.css
@@ -311,3 +311,12 @@ a {
 	background-color: tomato;
 }
 /* --------------- */
+
+
+/* ---- NO AFFIX ON SMALL DEVICES ---- */
+@media (max-width: 765px) {
+	#calendarial-accordion.affix, #settings.affix, #administration.affix {
+		position: static;
+	}
+}
+/* ----------------------------------- */
